#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(media, 0.1, dcdcmin@gmail.com)
AC_CONFIG_SRCDIR([src/media_player.h])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE(media, 0.1)
# Checks for programs.
AC_PROG_CC

AC_PROG_LIBTOOL 
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
				 src/test/Makefile])

AC_OUTPUT
